Fixed h1 and h2 spacing

--- a/css/style.css
+++ b/css/style.css
@@ -99,14 +99,14 @@ section {
 section h1 {
     font-size: calc(var(--txth1size)*1.2);
     text-align: center;
-    margin: .2em;
+    margin: 0em 0em .2em;
     font-family: Kalam, cursive;
 }
 
 section h2 {
     font-size: calc(var(--txth2size)*1.2);
     text-align: center;
-    margin: 0.5em 0em;
+    margin: 0em 0em 0.5em;
     font-family: Kalam, cursive;
 }
 
